# rust-final-project

./: README.md  python.ipynb
rust/: .gitignore  Cargo.toml
rust/docs/: .rustc_info.json
rust/docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
rust/docs/doc/rust_final_project/: all.html  fn.main.html  index.html  sidebar-items.js
rust/docs/doc/rust_final_project/db/: fn.cleardb.html  fn.connect_db.html  fn.create_table.html  fn.get_and_print_first_records.html  fn.insert_movies.html  fn.process_movies.html  index.html  sidebar-items.js
rust/docs/doc/rust_final_project/ingestion/: fn.ingest_csv.html  index.html  sidebar-items.js
rust/docs/doc/rust_final_project/models/: enum.IngestionError.html  index.html  sidebar-items.js  struct.Movie.html  struct.TransformedMovie.html
rust/docs/doc/rust_final_project/transform/: fn.clean_and_validate_data.html  fn.dataframe_to_transformed_movies.html  fn.movies_to_dataframe.html  fn.transform_movies.html  index.html  sidebar-items.js
rust/docs/doc/rust_final_project/utils/: fn.parse_field.html  index.html  sidebar-items.js
rust/docs/doc/src/rust_final_project/: main.rs.html
rust/docs/doc/src/rust_final_project/db/: mod.rs.html
rust/docs/doc/src/rust_final_project/ingestion/: mod.rs.html
rust/docs/doc/src/rust_final_project/models/: mod.rs.html
rust/docs/doc/src/rust_final_project/transform/: mod.rs.html
rust/src/: main.rs
rust/src/db/: mod.rs
rust/src/ingestion/: mod.rs
rust/src/models/: mod.rs
rust/src/transform/: mod.rs
rust/src/utils/: mod.rs
(+10 files in other folders)
